--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "autoprefixer": "^9",
+    "craco": "^0.0.3",
     "postcss": "^7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
