--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "axios": "^0.21.1",
     "postcss": "^7",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-stomp": "^5.1.0",
+    "sockjs-client": "^1.5.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^1.0.1"
   },
