--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 REACT_APP_BACKEND_BASEURL=https://leancoffree.com:8085
 REACT_APP_FRONTEND_BASEURL=http://dev.leancoffree.com
 REACT_APP_SESSION_REGEX=http://dev.leancoffree.com/session/[0-9, a-f]{8}-[0-9, a-f]{4}-[0-9, a-f]{4}-[0-9, a-f]{4}-[0-9, a-f]{12}
+REACT_APP_STOMP_CLIENT_DEBUG=false
