Update backend production URL

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_BACKEND_BASEURL=https://leancoffree.com:8085
+REACT_APP_BACKEND_BASEURL=https://backend.leancoffree.com
 REACT_APP_FRONTEND_BASEURL=https://leancoffree.com
 REACT_APP_SESSION_REGEX=https://leancoffree.com/session/[0-9, a-f]{8}-[0-9, a-f]{4}-[0-9, a-f]{4}-[0-9, a-f]{4}-[0-9, a-f]{12}
 REACT_APP_STOMP_CLIENT_DEBUG=false
